# NCBlob

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  client.cc  coord_cfg.toml  coordinator.cc  data_worker.cc  worker_cfg.toml
common/: BlockingQueue.hh  channel.hpp  config.hpp  exception.hpp  shared_vec.hpp  span.hpp
core/: coord_core.cc  coord_core.hh  coord_prof.cc  coord_prof.hh  store_core.hpp  worker_core.cc  worker_core.hh
ec/: CMakeLists.txt  ec_intf.cc  erasure_code.cc  str_util.cc  str_util.hh
ec/Lonse/: CMakeLists.txt  Computation.cc  Computation.hh  ErasureCodeLonse copy.cc  ErasureCodePluginLonse.cc  ErasureCodePluginLonse.h  erasure_code_Lonse.cc  erasure_code_Lonse.hh  erasure_code_Lonse_factory.cc  galois.c  galois.h  include.hh  jerasure.c  jerasure.h
ec/clay/: erasure_code_clay.cc  erasure_code_clay.hh  erasure_code_clay_factory.cc
ec/include/: ec_intf.hh  erasure_code.hh  erasure_code_factory.hpp  erasure_code_intf.hpp  exception.hpp  utils.cpp  utils.hpp
ec/jerasure/: erasure_code_jerasure.cc  erasure_code_jerasure.hh  erasure_code_jerasure_factory.cc
lib/ec/: CMakeLists.txt
lib/ec/jerasure/src/: galois.c
lib/rust_part/: .gitignore  CMakeLists.txt  Cargo.toml  build.rs
lib/rust_part/src/: error.rs  lib.rs
lib/rust_part/src/ffi/: azure_trace.rs  local_file_system.rs  memmap.rs  memory_cache.rs  mod.rs  sqlite.rs
lib/rust_part/src/store_impl/: cache.rs  local_filesystem.rs  mapped_file.rs  mod.rs  sqlite.rs
lib/rust_part/tests/: blob_store_impl.rs
lib/rust_part/tests/common/: blob_store_helper.rs  mod.rs
lib/thread_pool/include/: BS_thread_pool.hpp
meta/: ceph_hash.hpp  meta.hpp  meta_core.hpp  meta_exception.hpp  meta_store.hpp  serde.hpp
protocol/: BlockCommand.cc  BlockCommand.hh  Command.cc  Command.hh  comm.hh
script/: iplist.txt  launch_coord.sh  launch_worker.sh  prepare_worker.sh
task/: BlockTasks.cc  Tasks.cc  Tasks.hh  task_util.cc  task_util.hh
test/: blockWorker_test.cc  worker_test.cc
trace/: azure_trace.cc  azure_trace.hh  merge.cc  merge.hh  merge_scheme.hpp  size_lru_cache.hpp
